# LW-CHAT-BOT

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .replit  .ruff.toml  API_INSTRUCTIONS.md  Dockerfile  ENHANCED_FEATURES.md  FRONTEND_SETUP.md  LICENSE  RAILWAY_DEPLOY.md  README.md  build.sh  deploy.py  first commit  jest.config.ts  nixpacks.toml  openapi.yaml  package-lock.json  package.json  pyproject.toml  railway.json  replit.md  requirements.txt  test-enhanced-features.sh  tsconfig.json
alembic/: env.py
app/: main.py
attached_assets/: Pasted--usr-bin-env-bash-UW-Wizard-end-to-end-smoke-as-a-single-script-for-Replit-Runs-backend-c-1758322630022_1758322630024.txt  Pasted-0-Minimal-deps-env-server-requirements-txt-append-cat-EOF-server-requirements-txt-open-1758645312412_1758645312413.txt  Pasted-0-Why-this-build-We-need-a-standalone-app-I-can-test-end-to-end-Connectors-page-Chatbot-Merchan-1758132038515_1758132038516.txt  Pasted-1-Admin-screen-Background-Review-Force-Send-Backend-FastAPI-server-routes-admin-py-from-fast-1758228840118_1758228840118.txt  Pasted-1-Backend-read-accept-endpoints-server-routes-deals-read-py-from-fastapi-import-APIRouter-Depen-1758229190663_1758229190665.txt  Pasted-1-Critical-add-proper-Foreign-Keys-relationships-Your-api-public-deals-query-is-blowing-up-bec-1758313920239_1758313920240.txt  Pasted-Add-dev-auth-knobs-to-settings-Edit-server-core-config-py-and-add-these-fields-inside-Settings--1758323197102_1758323197103.txt  Pasted-Automated-Flags-Workflow-Builder-Spec-v1-UW-Wizard-Scope-deliver-the-red-items-from-the-Mi-1758336796207_1758336796208.txt  Pasted-Awesome-here-s-a-ready-to-paste-patch-set-that-closes-the-gaps-we-flagged-It-s-written-for-your-F-1758227940638_1758227940639.txt  Pasted-Create-file-web-src-seeds-chad-ts-Call-bootstrapChadSeeds-once-in-web-src-main-tsx-or-App-tsx--1758138640452_1758138640453.txt  Pasted-Gaps-that-block-minimum-automation-must-add-Core-data-model-is-missing-There-are-no-merchant--1758224194871_1758224194875.txt  Pasted-Gaps-that-still-block-automate-the-client-workflow-Returning-merchant-flow-is-incomplete-GET--1758227640012_1758227640015.txt  Pasted-Goal-for-Replit-No-CSV-upload-Use-the-existing-parsed-bank-statements-to-Produce-monthly-rows--1758561243892_1758561243893.txt  Pasted-Goal-make-the-backend-pilot-ready-on-Replit-by-fixing-config-CORS-FAIL-events-schema-deal-i-1758297982458_1758297982459.txt  Pasted-Love-it-Let-s-make-UW-Wizard-sound-like-a-real-funding-rep-Chad-and-behave-differently-for-pote-1758137200585_1758137200586.txt  Pasted-MPLEMENTATION-BRIEF-Offer-Lab-CSV-Table-Monthly-Snapshot-pre-offers-Goals-On-the-Offers-Lab--1758557165381_1758557165383.txt  Pasted-No-CSV-upload-Use-the-existing-parsed-bank-statements-to-Produce-monthly-rows-same-fields-as-our-1758557730278_1758557730278.txt  Pasted-Perfect-I-ll-drop-in-Chad-UW-Wizard-seeds-and-the-wiring-so-your-Chat-page-actually-speaks-like--1758137987877_1758137987878.txt  Pasted-Perfect-moving-ahead-with-the-two-follow-ups-you-okayed-A-Backfill-enforce-offers-deal-id-clea-1758228427206_1758228427207.txt  Pasted-Replit-Agent-Build-Brief-UW-Wizard-Pilot-Fixes-Goal-Fix-remaining-blockers-and-polish-Solid-c-1758304682227_1758304682229.txt  Pasted-Replit-Agent-Build-Brief-UW-Wizard-Pilot-Readiness-Goal-make-the-app-pilot-ready-by-adding-s-1758291653490_1758291653492.txt  Pasted-Replit-Agent-Build-Brief-UW-Wizard-Pilot-Ready-Patch-You-are-Replit-Agent-Apply-all-steps-exac-1758309708610_1758309708611.txt  Pasted-Replit-Agent-Task-UW-Wizard-LSP-Clean-Prod-Toggle-1-Add-small-shared-types-helpers-reduces-1758330906651_1758330906653.txt  (+17 more)
bot-api/: .cursorrules  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  README.md  jest.config.js  openapi.yaml  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
bot-api/.github/workflows/: ci.yml
bot-api/app/: main.py
bot-api/cursor-tasks/: 01_scaffold_api.md  02_plaid_and_openai.md  03_pdf_parse_endpoint.md  04_offers_logic.md  05_cherry_sms.md  06_signing_webhooks.md  07_background_check.md  08_security_telemetry.md
bot-api/src/: server.ts
bot-api/src/lib/: auth.ts  config.ts  error-handler.ts  logger.ts  migrate.ts  request-logger.ts  seed.ts
bot-api/src/routes/: auth.ts  background.ts  bank.ts  clients.ts  events.ts  health.ts  intake.ts  metrics.ts  offers.ts  plaid.ts  sign.ts  sms.ts
frontend/: package-lock.json  package.json  (+1 more)
(+205 files in other folders)
